<resources>
    <string name="app_name">Pyrexia</string>
    <string name="generate_qr_code">Generate Qr Code</string>
    <string name="generate_qr_code_in_bulk">Generate Qr Code in Bulk</string>
    <string name="scan_qr_code">Scan Qr Code</string>
    <string name="full_name">Full Name</string>
    <string name="user_age">Age</string>
    <string name="barcode_reader">Barcode Reader</string>
    <string name="scanned_qr_code_result">scanned_qr_code_result</string>
    <string name="first_name">First Name</string>
    <string name="age">Age</string>
    <string name="app_needs_your_camera_permission_in_order_to_scan_qr_code">app_needs_your_camera_permission_in_order_to_scan_qr_code</string>
    <string name="batch">Batch</string>
    <string name="college">College</string>
    <string name="registration_no">Registration No.</string>
    <string name="file_provider_name">.fileProvider</string>
    <string name="something_went_wrong">Somthing went wrong!</string>
    <string name="select_file">Select File\n</string>
    <string name="select_xml_file_to_upload">Select excel file to upload</string>
    <string name="got_it">Got it!</string>
    <string name="scanned">Scanned!</string>
    <string name="welcome_back_admin_sign_in_to_continue">Welcome back admin — sign in to continue</string>
    <string name="go_to_admin">Admin Work</string>
    <string name="welcome_text">Welcome! Choose an option below</string>
    <string name="entry_will_start_from_5_pm_onwards">Entry will start from 5 PM Onwards!</string>
    <string name="generate_single_qr">Generate Single QR</string>
    <string name="generate_bulk_qr">Generate Bulk QR</string>
</resources>